Added layout structure and styling

--- a/index.html
+++ b/index.html
@@ -1,85 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MunyaoTech Lab</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
-    <div class="logo">
-  <img src="images/WhatsApp Image 2025-07-30 at 10.06.07 AM" alt="MunyaoTech Lab Logo" style="height: 50px;">
-</div>
-
+    <img src="logo.png" alt="MunyaoTech Lab Logo" class="logo">
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="hero">
-  <h1>Welcome to MunyaoTech Lab</h1>
-  <p>Empowering innovation through tech and creativity.</p>
-  <a href="#about" class="btn">Learn More</a>
-</section>
+  <main>
+    <section id="home">
+      <h1>Welcome to MunyaoTech Lab</h1>
+      <p>Empowering innovation through tech and creativity.</p>
+    </section>
 
-<section class="about-preview" id="about">
-  <h2>About MunyaoTech Lab</h2>
-  <p>
-    MunyaoTech Lab is a hub of innovation and creativity where ideas are transformed into powerful tech solutions.
-    We are committed to empowering individuals and communities through technology, offering training, mentorship,
-    and tech services to drive digital transformation in Africa and beyond.
-  </p>
-</section>
- 
-  <section class="services-preview" id="services">
-  <h2>Our Services</h2>
-  <ul>
-    <li>Custom Website & App Development</li>
-    <li>AI & Chatbot Solutions</li>
-    <li>Tech Training & Mentorship Programs</li>
-    <li>Digital Transformation Consultancy</li>
-    <li>Cybersecurity Awareness & Tools</li>
-    <li>Research & Academic Writing Support</li>
-  </ul>
-</section>
+    <section id="about">
+      <h2>About MunyaoTech Lab</h2>
+      <p>MunyaoTech Lab is a hub of innovation and creativity where ideas are transformed into powerful tech solutions. We are committed to empowering Africa through technology, offering training, mentorship, and tech services to drive digital transformation in Africa and beyond.</p>
+    </section>
 
-<section class="contact-preview">
-  <h2>Contact Us</h2>
-  <p>Email:shadrackmunyao661@gmail.com</p>
-  <p>Phone: +254 790547859</p>
-  <p>Location: Nairobi, Kenya</p>
-</section>
+    <section id="services">
+      <h2>Our Services</h2>
+      <ul>
+        <li>Custom Website & App Development</li>
+        <li>AI & Chatbot Solutions</li>
+        <li>Tech Training & Mentorship Programs</li>
+        <li>Digital Transformation Consultancy</li>
+        <li>Cybersecurity Awareness & Tools</li>
+        <li>Research & Academic Writing Support</li>
+      </ul>
+    </section>
+
+    <section id="projects">
+      <h2>Our Projects</h2>
+      <p>Coming soon...</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:shadrackmunyao661@gmail.com">shadrackmunyao661@gmail.com</a></p>
+      <p>Location: Nairobi, Kenya</p>
+    </section>
+  </main>
 
   <footer>
-    &copy; 2025 MunyaoTech Lab. All rights reserved.
+    <p>&copy; 2025 MunyaoTech Lab. All rights reserved.</p>
   </footer>
-
-  <section class="portfolio" id="projects">
-  <h2>Our Projects</h2>
-  <div class="portfolio-grid">
-    <div class="project-card">
-      <h3>EduChatbot App</h3>
-      <p>An AI-powered chatbot that supports students with learning, answering questions, and scheduling study sessions.</p>
-    </div>
-    <div class="project-card">
-      <h3>Forex Trading Platform</h3>
-      <p>Real-time charting, AI signal generation, and secure order execution for forex traders.</p>
-    </div>
-    <div class="project-card">
-      <h3>Lost Animal Tracker</h3>
-      <p>A gadget + app combo to help communities find and report missing pets in real-time.</p>
-    </div>
-  </div>
-</section>
-
 </body>
 </html>
