Fixed logo display issue and updated HTML header section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <header>
     <img src="logo.png" alt="MunyaoTech Lab Logo" class="logo">
-    <nav>
+    <h1>MunyaoTech Lab</h1>
+    <header>
+      <nav>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
