Added new logo image munyao-logo.jpg and updated HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="MunyaoTech Lab Logo" class="logo">
+    <img src="munyao-logo.jpeg" alt="MunyaoTech Lab Logo" class="logo">
     <h1>MunyaoTech Lab</h1>
     <header>
       <nav>
