Added responsive navigation bar to site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <nav class="navbar">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
+    <header>
     <img src="munyao-logo.jpeg" alt="MunyaoTech Lab Logo" class="logo">
     <h1>MunyaoTech Lab</h1>
     <header>
