--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar">
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
     <header>
-    <img src="munyao-logo.jpeg" alt="MunyaoTech Lab Logo" class="logo">
+  <img src="munyao-logo.jpeg" alt="MunyaoTech Lab Logo" class="logo">
     <h1>MunyaoTech Lab</h1>
     <header>
       <nav>
@@ -29,7 +21,15 @@
       </ul>
     </nav>
   </header>
-
+<nav class="navbar">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
+  </header>
   <main>
     <section id="home">
       <h1>Welcome to MunyaoTech Lab</h1>
