--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header>
+      <section class="hero">
+  <h2>Welcome to MunyaoTech Lab</h2>
+  <p>Innovating with tech and creativity — explore our projects, ideas, and more.</p>
+  <a href="#projects" class="hero-button">Explore Projects</a>
+</section>
   <img src="munyao-logo.jpeg" alt="MunyaoTech Lab Logo" class="logo">
     <h1>MunyaoTech Lab</h1>
     <header>
