Added Projects section with sample project cards

--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
   <p>Innovating with tech and creativity — explore our projects, ideas, and more.</p>
   <a href="#projects" class="hero-button">Explore Projects</a>
 </section>
-      <nav>
+<section id="projects" class="projects">
+  <h2>Our Projects</h2>
+  <div class="project-list">
+    <div class="project-card">
+      <h3>EduChatbot</h3>
+      <p>An AI-powered chatbot for answering academic questions and providing study help.</p>
+    </div>
+    <div class="project-card">
+      <h3>Lost Animal Tracker</h3>
+      <p>A smart community-based tool to help locate and reunite lost animals with their owners.</p>
+    </div>
+    <div class="project-card">
+      <h3>Forex AI App</h3>
+      <p>A full trading platform with live charts, AI signals, and real-time trade execution.</p>
+    </div>
+  </div>
+</section>
+<nav>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
