Added Contact Us section to homepage

--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@
     </section>
 
     <section id="contact">
-      <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:shadrackmunyao661@gmail.com">shadrackmunyao661@gmail.com</a></p>
-      <p>Location: Nairobi, Kenya</p>
-    </section>
+  <h2>Contact Us</h2>
+  <p>We'd love to hear from you!</p>
+  <ul>
+    <li>Email: <a href="mailto:shadrackmunyao661@gmail.com">shadrackmunyao661@gmail.com</a></li>
+    <li>Phone: +254 739577610</li>
+    <li>Location: Nairobi, Kenya</li>
+  </ul>
+</section>
   </main>
-
   <footer>
     <p>&copy; 2025 MunyaoTech Lab. All rights reserved.</p>
   </footer>
