Improved footer design and links

--- a/index.html
+++ b/index.html
@@ -82,7 +82,14 @@
 </section>
   </main>
   <footer>
-    <p>&copy; 2025 MunyaoTech Lab. All rights reserved.</p>
-  </footer>
+  <p>&copy; 2025 MunyaoTech Lab. All rights reserved.</p>
+  <div class="footer-links">
+    <a href="#home">Home</a> |
+    <a href="#about">About</a> |
+    <a href="#projects">Projects</a> |
+    <a href="#contact">Contact</a>
+  </div>
+</footer>
+
 </body>
 </html>
