--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
     <h1>Welcome Back</h1>
 
     <form id="loginForm">
-      <input type="email" placeholder="Email address" required />
-      <input type="password" placeholder="Password" required />
+      <input type="email" id="loginEmail" placeholder="Email address" required />
+      <input type="password" id="loginPassword" placeholder="Password" required />
       
       <button type="submit" class="signup-btn">SIGN IN</button>
     </form>
