--- a/signup.html
+++ b/signup.html
@@ -13,12 +13,12 @@
     <h1>MunyaoTech Lab</h1>
 
     <form id="signupForm">
-      <input type="text" placeholder="First Name" required />
-      <input type="text" placeholder="Last Name" required />
-      <input type="text" placeholder="Username" required />
-      <input type="tel" placeholder="Phone number (format: 2547...)" required />
-      <input type="email" placeholder="Email address" required />
-      <input type="password" placeholder="Password" required />
+      <input type="text" id="firstName" placeholder="First Name" required />
+      <input type="text" id="lastName" placeholder="Last Name" required />
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="tel" id="phone" placeholder="Phone number (format: 2547...)" required />
+      <input type="email" id="email" placeholder="Email address" required />
+      <input type="password" id="password" placeholder="Password" required />
       
       <button type="submit" class="signup-btn">CREATE ACCOUNT</button>
     </form>
