Added "Forgot Password" functionality with email reset

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <form id="loginForm">
       <input type="email" id="loginEmail" placeholder="Email address" required />
       <input type="password" id="loginPassword" placeholder="Password" required />
-      
+      <p><a href="#" id="forgotPasswordLink">Forgot your password?</a></p>
       <button type="submit" class="signup-btn">SIGN IN</button>
     </form>
 
