--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects | MunyaoTech Lab</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="ccs/style.ccs" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
