--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
   <h2>Welcome to MunyaoTech Lab</h2>
   <p>Innovating with tech and creativity — explore our projects, ideas, and more.</p>
   <a href="#projects" class="hero-button">Explore Projects</a>
+  <div class="footer-links">
+    <a href="#home">Home</a> |
+    <a href="#about">About</a> |
+    <a href="#projects">Projects</a> |
+    <a href="#contact">Contact</a>
+  </div>
 </section>
 <section id="projects" class="projects">
   <h2>Our Projects</h2>
