updated header section

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
   });
 </script>
 
-    <header>
-       <img src="munyao-logo.jpeg" alt="MunyaoTech Lab Logo" class="logo">
-    <h1>MunyaoTech Lab</h1>
-    <header>
-      <section class="hero">
+    <!-- Corrected Header Section -->
+<header style="background-color: #000; text-align: center; padding: 20px;">
+  <img src="munyao-logo.jpeg" alt="MunyaoTech Lab Logo" class="logo" style="max-width: 150px; height: auto; display: block; margin: 0 auto;">
+  <h1 style="color: white; margin-top: 10px;">MunyaoTech Lab</h1>
+  <p style="color: white; margin-top: -10px;">Empowering Innovation</p>
+</header>
+
+<section class="hero">
   <h2>Welcome to MunyaoTech Lab</h2>
   <p>Innovating with tech and creativity — explore our projects, ideas, and more.</p>
   <a href="#projects" class="hero-button">Explore Projects</a>
