--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MunyaoTech Lab</title>
-  <link rel="stylesheet" href="ccs/style.ccs">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <p id="welcomeUser"></p>
