--- a/index.html
+++ b/index.html
@@ -7,41 +7,103 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>,
- <div class="top-banner">
-  <span id="welcome-text">
-    At MunyaoTech Lab, we’re passionate about building smart solutions that solve real-world problems.
-    Whether you're here to explore our projects, collaborate on cutting-edge tech, or stay inspired—you're in the right place.
-  </span>
-</div>
-
-<style>
-.top-banner {
-  background-color: #001f3f;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  font-size: 16px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 999;
-}
-#welcome-text {
-  animation: fadeLoop 8s ease-in-out infinite;
-  display: inline-block;
-}
-@keyframes fadeLoop {
-  0%, 100% { opacity: 0; }
-  20%, 80% { opacity: 1; }
-}
-</style>
+<!-- Top welcome banner -->
 <div class="top-banner" id="topBanner">
   <span id="welcome-text">
     At MunyaoTech Lab, we’re passionate about building smart solutions that solve real-world problems.
     Whether you're here to explore our projects, collaborate on cutting-edge tech, or stay inspired—you're in the right place.
   </span>
-  <button class="close-banner" onclick="document.getElementById('topBanner').style.display='none'">×</button>
+  <button class="close-banner" onclick="hideBanner()">×</button>
 </div>
+
+<!-- Styles -->
+<style>
+  .top-banner {
+  background-color: #001f3f;
+  color: white;
+  text-align: center;
+  padding: 4px 35px 4px 8px;
+  font-size: 12px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  line-height: 1.3;
+  min-height: 30px;
+}
+
+#welcome-text {
+  display: inline-block;
+  animation: fadeLoop 8s ease-in-out infinite;
+}
+
+@keyframes fadeLoop {
+  0%, 100% { opacity: 0; }
+  20%, 80% { opacity: 1; }
+}
+<style>
+  .top-banner {
+    background-color: #001f3f;
+    color: white;
+    text-align: center;
+    padding: 4px 35px 4px 8px;  /* Smaller top/bottom padding */
+    font-size: 12px;           /* Smaller text */
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 999;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    line-height: 1.3;
+    min-height: 30px;
+  }
+
+  #welcome-text {
+    display: inline-block;
+    animation: fadeLoop 8s ease-in-out infinite;
+  }
+
+  @keyframes fadeLoop {
+    0%, 100% { opacity: 0; }
+    20%, 80% { opacity: 1; }
+  }
+
+  .close-banner {
+    position: absolute;
+    top: 3px;
+    right: 8px;
+    background-color: #ff4136;
+    color: white;
+    border: none;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .close-banner:hover {
+    background-color: #e60000;
+  }
+
+  /* Optional: prevent banner from overlapping content */
+  body {
+    padding-top: 36px;
+  }
+</style>
+
+
+<!-- Script -->
+<script>
+  function hideBanner() {
+    document.getElementById('topBanner').style.display = 'none';
+  }
+</script>
+
 
 <p id="welcomeUser"></p>
 <button id="signOutBtn">Sign Out</button>
@@ -344,7 +406,7 @@
       <p>Coming soon...</p>
     </section>
 
-    <section id="contact">
+<section id="contact">
   <h2>Contact Us</h2>
   <p>We'd love to hear from you!</p>
   <ul>
@@ -357,5 +419,6 @@
   <footer>
   <p>&copy; 2025 MunyaoTech Lab. All rights reserved.</p>
   </footer>
-</body>
+
+ </body>
 </html>
