--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -1,157 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Admin Dashboard | MunyaoTech Lab</title>
-  <link rel="stylesheet" href="/css/style.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    .form-container, .article-list {
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 15px;
-      background-color: #f4f4f4;
-      border-radius: 10px;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #007bff;
-      color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-    button.delete-btn {
-      background-color: crimson;
-    }
-    .article-item {
-      background-color: #fff;
-      padding: 10px;
-      margin-top: 10px;
-      border-radius: 6px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Panel - Post</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
 
-  <div class="form-container">
-    <h2>Post a New Article</h2>
-    <form id="article-form">
-      <input type="text" id="title" placeholder="Article Title" required />
-      <textarea id="content" rows="6" placeholder="Write your article..." required></textarea>
-      <input type="text" id="imageUrl" placeholder="Optional Image URL" />
-      <button type="submit" id="submitBtn">Post Article</button>
-      <button type="button" id="cancelEditBtn" style="display:none; background:gray;">Cancel Edit</button>
-    </form>
-  </div>
+  <div class="bg-white shadow-lg rounded-2xl p-8 w-full max-w-lg">
+    <h1 class="text-2xl font-bold text-purple-600 mb-6 text-center">✍️ Create New Post</h1>
 
-  <div class="article-list">
-    <h3>All Articles</h3>
-    <div id="article-list-container"></div>
-  </div>
+    <!-- Post Form -->
+    <!-- ✅ REPLACE your existing post form with this -->
+<div class="bg-white shadow-lg rounded-2xl p-8 w-full max-w-lg mx-auto">
+  <h1 class="text-2xl font-bold text-purple-600 mb-6 text-center">✍️ Create New Post</h1>
 
-  <!-- Firebase Scripts -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
-  <script src="/firebase/firebase-admin-config.js"></script>
+  <form id="postForm" class="space-y-5">
+    <!-- Title -->
+    <div>
+      <label for="title" class="block text-sm font-medium text-gray-700">Post Title</label>
+      <input type="text" id="title"
+        class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-purple-500"
+        placeholder="Enter your post title" required />
+    </div>
 
-  <script>
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-    const form = document.getElementById("article-form");
-    const title = document.getElementById("title");
-    const content = document.getElementById("content");
-    const imageUrl = document.getElementById("imageUrl");
-    const articleList = document.getElementById("article-list-container");
-    const cancelEditBtn = document.getElementById("cancelEditBtn");
-    const submitBtn = document.getElementById("submitBtn");
+    <!-- Content -->
+    <div>
+      <label for="content" class="block text-sm font-medium text-gray-700">Post Content</label>
+      <textarea id="content" rows="5"
+        class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-purple-500"
+        placeholder="Write your post content..." required></textarea>
+    </div>
 
-    let editId = null;
+    <!-- Submit Button -->
+    <button type="submit"
+      class="w-full py-3 bg-purple-600 text-white rounded-xl font-semibold shadow-md hover:bg-purple-700 transition-all">
+      🚀 Publish Post
+    </button>
+  </form>
+</div>
 
-    auth.onAuthStateChanged(user => {
-      if (!user || user.email !== "youradmin@example.com") {
-        alert("Access denied.");
-        window.location.href = "/";
-      }
-    });
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+  import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
+  // ✅ Your Firebase Config (replace with your actual config)
+  const firebaseConfig = {
+    apiKey: "AIzaSyCraXq51qucrTWJlD7ZXjUodP92Aqxfh3c",
+    authDomain: "munyaotech-lab.firebaseapp.com",
+    projectId: "munyaotech-lab",
+    storageBucket: "munyaotech-lab.appspot.com",
+    messagingSenderId: "654834051986",
+    appId: "1:654834051986:web:076f2f5c10cae1291baf4b"
+  };
 
-      const articleData = {
-        title: title.value,
-        content: content.value,
-        imageUrl: imageUrl.value,
-        createdAt: firebase.firestore.FieldValue.serverTimestamp(),
-      };
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-      if (editId) {
-        await db.collection("articles").doc(editId).update(articleData);
-        editId = null;
-        submitBtn.textContent = "Post Article";
-        cancelEditBtn.style.display = "none";
-      } else {
-        await db.collection("articles").add(articleData);
-      }
+  // ✅ Handle form submit
+  document.getElementById("postForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
 
-      form.reset();
-    });
+    const title = document.getElementById("title").value;
+    const content = document.getElementById("content").value;
 
-    cancelEditBtn.addEventListener("click", () => {
-      editId = null;
-      form.reset();
-      submitBtn.textContent = "Post Article";
-      cancelEditBtn.style.display = "none";
-    });
-
-    function renderArticles() {
-      db.collection("articles").orderBy("createdAt", "desc").onSnapshot(snapshot => {
-        articleList.innerHTML = "";
-        snapshot.forEach(doc => {
-          const article = doc.data();
-          const div = document.createElement("div");
-          div.className = "article-item";
-          div.innerHTML = `
-            <strong>${article.title}</strong>
-            <p>${article.content}</p>
-            ${article.imageUrl ? `<img src="${article.imageUrl}" style="max-width:100%;">` : ""}
-            <br />
-            <button onclick="editArticle('${doc.id}', \`${article.title}\`, \`${article.content}\`, '${article.imageUrl || ""}')">Edit</button>
-            <button class="delete-btn" onclick="deleteArticle('${doc.id}')">Delete</button>
-          `;
-          articleList.appendChild(div);
-        });
+    try {
+      await addDoc(collection(db, "posts"), {
+        title: title,
+        content: content,
+        timestamp: serverTimestamp()
       });
-    }
 
-    function editArticle(id, titleText, contentText, imageText) {
-      editId = id;
-      title.value = titleText;
-      content.value = contentText;
-      imageUrl.value = imageText;
-      submitBtn.textContent = "Update Article";
-      cancelEditBtn.style.display = "inline-block";
+      // Simple styled success message
+      alert("✅ Post added successfully!");
+      document.getElementById("postForm").reset();
+    } catch (err) {
+      console.error("❌ Error adding post:", err);
+      alert("❌ Error: " + err.message);
     }
+  });
+  // ✅ Toast Function
+function showToast(message, type = "success") {
+  const toastContainer = document.getElementById("toastContainer");
 
-    async function deleteArticle(id) {
-      const confirmDelete = confirm("Are you sure you want to delete this article?");
-      if (confirmDelete) {
-        await db.collection("articles").doc(id).delete();
-      }
-    }
+  const toast = document.createElement("div");
+  toast.className = `px-4 py-3 rounded-lg shadow-md text-white flex items-center justify-between transition-all duration-500
+    ${type === "success" ? "bg-green-500" : "bg-red-500"}`;
 
-    renderArticles();
-  </script>
+  toast.innerHTML = `
+    <span>${message}</span>
+    <button class="ml-3 text-white font-bold focus:outline-none">✖</button>
+  `;
+
+  // Remove toast on button click
+  toast.querySelector("button").addEventListener("click", () => {
+    toast.remove();
+  });
+
+  // Auto-remove after 4 seconds
+  setTimeout(() => {
+    toast.remove();
+  }, 4000);
+
+  toastContainer.appendChild(toast);
+}
+// ✅ Import Firebase SDK
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getFirestore, collection, addDoc, serverTimestamp, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+// ✅ Your Firebase config (replace with your real config)
+const firebaseConfig = {
+  apiKey: "AIzaSyCraXq51qucrTWJlD7ZXjUodP92Aqxfh3c",
+  authDomain: "munyaotech-lab.firebaseapp.com",
+  projectId: "munyaotech-lab",
+  storageBucket: "munyaotech-lab.appspot.com",
+  messagingSenderId: "654834051986",
+  appId: "1:654834051986:web:076f2f5c10cae1291baf4b"
+};
+// ✅ Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+document.getElementById("postForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  setLoading(true);
+
+  const title = document.getElementById("title").value.trim();
+  const content = document.getElementById("content").value.trim();
+
+  try {
+    await addDoc(collection(db, "posts"), {
+      title: title,
+      content: content,
+      timestamp: serverTimestamp()
+    });
+
+    showToast("✅ Post added successfully!", "success");
+    document.getElementById("postForm").reset();
+  } catch (err) {
+    console.error("❌ Error adding post:", err);
+    showToast("❌ Error: " + err.message, "error");
+  } finally {
+    setLoading(false);
+  }
+});
+// ✅ Realtime Listener for Posts
+const postsList = document.getElementById("postsList");
+
+const q = query(collection(db, "posts"), orderBy("timestamp", "desc"));
+onSnapshot(q, (snapshot) => {
+  postsList.innerHTML = ""; // clear old list
+  snapshot.forEach((doc) => {
+    const post = doc.data();
+    const postEl = document.createElement("div");
+
+    postEl.className = "p-4 bg-gray-800 rounded-lg shadow-md mb-4";
+    postEl.innerHTML = `
+      <h3 class="text-xl font-bold text-purple-400">${post.title}</h3>
+      <p class="text-gray-300 mt-2">${post.content}</p>
+      <small class="text-gray-500">📅 ${post.timestamp?.toDate().toLocaleString() || "Just now"}</small>
+    `;
+
+    postsList.appendChild(postEl);
+  });
+});
+
+</script>
+<h2 class="text-2xl font-semibold text-white mt-6 mb-3">All Posts</h2>
+<div id="postsList" class="space-y-4"></div>
+
+<!-- ✅ ADD this before </body> -->
+<div id="toastContainer" class="fixed bottom-5 right-5 space-y-3 z-50"></div>
 </body>
 </html>
