--- a/index.html
+++ b/index.html
@@ -157,10 +157,57 @@
     <a href="#projects">Projects</a> |
     <a href="#contact">Contact</a>
   </div>
-  <section id="recent-articles">
-  <h2>Latest articles</h2>
-  <div id="home-articles-container"></div>
-</section>
+  <!-- ✅ REPLACE your existing posts container with this -->
+<main class="max-w-6xl mx-auto px-6 py-10">
+  <div id="posts" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <!-- Posts will load here -->
+  </div>
+</main>
+<!-- ✅ ADD this at top of body if no header exists -->
+<header class="bg-purple-600 shadow-lg">
+  <div class="max-w-6xl mx-auto px-6 py-4">
+    <h1 class="text-2xl font-bold text-white">📰 Latest Posts</h1>
+  </div>
+</header>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+  import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
+  // ✅ Your Firebase Config (replace with your actual config)
+  const firebaseConfig = {
+    apiKey: "AIzaSyCraXq51qucrTWJlD7ZXjUodP92Aqxfh3c",
+    authDomain: "munyaotech-lab.firebaseapp.com",
+    projectId: "munyaotech-lab",
+    storageBucket: "munyaotech-lab.firebasestorage.app",
+    messagingSenderId: "654834051986",
+    appId: "1:654834051986:web:076f2f5c10cae1291baf4b"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  // Posts container
+  const postsDiv = document.getElementById("posts");
+
+  // ✅ Fetch and display posts in card style
+  const q = query(collection(db, "posts"), orderBy("timestamp", "desc"));
+  onSnapshot(q, (snapshot) => {
+    postsDiv.innerHTML = "";
+    snapshot.forEach((doc) => {
+      const post = doc.data();
+
+      postsDiv.innerHTML += `
+        <div class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all">
+          <h2 class="text-xl font-semibold text-purple-600 mb-3">${post.title}</h2>
+          <p class="text-gray-700 mb-4">${post.content}</p>
+          <span class="text-sm text-gray-400">📅 ${post.timestamp?.toDate().toLocaleString() || "Just now"}</span>
+        </div>
+      `;
+    });
+  });
+</script>
+
 <section id="projects" class="projects">
   <h2>Our Projects</h2>
   <style>
@@ -287,6 +334,12 @@
     });
   });
 </script>
+<section class="max-w-3xl mx-auto p-4">
+  <h1 class="text-2xl font-bold mb-4 text-center">Latest Posts</h1>
+  <div id="posts-container">
+    <!-- Posts will load here dynamically -->
+  </div>
+</section>
 
 <body>
   <div id="loading">
@@ -419,6 +472,48 @@
   <footer>
   <p>&copy; 2025 MunyaoTech Lab. All rights reserved.</p>
   </footer>
+<!-- Firebase SDKs -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+  // Your Firebase config (use the same one from admin panel)
+  const firebaseConfig = {
+    apiKey: "AIzaSyCraXq51qucrTWJlD7ZXjUodP92Aqxfh3c",
+    authDomain: "munyaotech-lab.firebaseapp.com",
+    projectId: "munyaotech-lab",
+    storageBucket: "munyaotech-lab.appspot.com",
+    messagingSenderId: "654834051986",
+    appId: "1:654834051986:web:076f2f5c10cae1291baf4b"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  // Fetch posts
+  async function loadPosts() {
+    const querySnapshot = await getDocs(collection(db, "posts"));
+    const postsContainer = document.getElementById("posts-container");
+
+    postsContainer.innerHTML = ""; // Clear first
+    querySnapshot.forEach((doc) => {
+      const post = doc.data();
+
+      // Create post card
+      const postCard = `
+        <div class="bg-white shadow-md rounded-lg p-4 mb-4">
+          <h2 class="text-xl font-bold text-purple-700 mb-2">${post.title}</h2>
+          <p class="text-gray-700">${post.content}</p>
+        </div>
+      `;
+      postsContainer.innerHTML += postCard;
+    });
+  }
+
+  // Load posts on page load
+  window.addEventListener("DOMContentLoaded", loadPosts);
+</script>
 
  </body>
 </html>
